rholang-tree-sitter/test/corpus/eval.txt
=======
Eval
=======

new z, stdout(`rho:io:stdout`) in {
  stdout!("hello, world!", *z)
}

{ stdout!("hello, world!", *z) }

---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      (send
        channel: (var)
        send_type: (send_single)
        inputs: (inputs
          (string_literal)
          (eval
            (var))))))
  (block
    (send
      channel: (var)
      send_type: (send_single)
      inputs: (inputs
        (string_literal)
        (eval
          (var))))))
