rholang-tree-sitter/test/corpus/if.txt
=======
If
=======

{ if (x) { y } else { z } }
{ if (x) { y } }
---

(source_file
  (block
    (ifElse
      condition: (var)
      consequence: (block
        (var))
      alternative: (block
        (var))))
  (block
    (ifElse
      condition: (var)
      consequence: (block
        (var)))))
