rholang-tree-sitter/test/corpus/matches.txt
===================
Matches expression
===================

p matches q

match p {
    q => true
    _ => false
}

---

(source_file
  (matches
    (var)
    (var))
  (match
    expression: (var)
    cases: (cases
      (case
        pattern: (var)
        proc: (bool_literal))
      (case
        pattern: (wildcard)
        proc: (bool_literal)))))
