rholang-tree-sitter/test/corpus/names.txt
=====
Names
=====

@{10 + 2}
@{5 + 7}

@{ P | Q }
@{ Q | P }
@{ Q | P | Nil }

---

(source_file
  (quote
    (block
      (add
        (long_literal)
        (long_literal))))
  (quote
    (block
      (add
        (long_literal)
        (long_literal))))
  (quote
    (block
      (par
        (var)
        (var))))
  (quote
    (block
      (par
        (var)
        (var))))
  (quote
    (block
      (par
        (par
          (var)
          (var))
        (nil)))))
