rholang-tree-sitter/test/corpus/pattern_var_ref.txt
=======
SendData
=======

new x in {
           for(@y <- x) {
             match y {
              {@=*x!(_)} => Nil
             }
           }
         }
---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var)))
    proc: (block
      (input
        receipts: (receipts
          (receipt
            (linear_bind
              names: (names
                (quote
                  (var)))
              input: (simple_source
                (var)))))
        proc: (block
          (match
            expression: (var)
            cases: (cases
              (case
                pattern: (block
                  (send
                    channel: (quote
                      (var_ref
                        kind: (var_ref_kind)
                        var: (var)))
                    send_type: (send_single)
                    inputs: (inputs
                      (wildcard))))
                proc: (nil)))))))))
